# spec-drift_chronometer

./: .env.example  .gitignore  .kiroignore  CLAUDE.md  LICENSE  README.md  config.json  dev.sh  main.py  manuscript_draft.md  product.md  pyproject.toml  requirements.md  spec.json  tech.md  verify_link.py  verify_stack.py
.kiro/: config.json  last_sync.audit
articles/: langchain-rag-governance.md
backend/: .kiroignore  Dockerfile  main.py  provision_ledger.sh  pyproject.toml  requirements.txt
backend/fastapi-0.135.1.dist-info/: RECORD
backend/infra/: genesis_intent.json  provision_ledger.sh
backend/sample_diffs/: 01_sovereign_audit_handler.diff  02_sovereign_intent_ledger.diff  03_sovereign_warden_check.diff  04_sovereign_compliance_log.diff  05_sovereign_threshold_guard.diff  06_monitoring_health_endpoint.diff  07_monitoring_request_middleware.diff  08_monitoring_spec_cache.diff  09_monitoring_pagination.diff  10_monitoring_retry_logic.diff  11_critical_oauth_handler.diff  12_critical_redis_queue.diff  13_critical_graphql_layer.diff  14_critical_kafka_producer.diff  15_resolving_revert_to_bedrock.diff  16_resolving_restore_governance.diff  17_resolving_compliance_check.diff  18_resolving_sovereign_baseline.diff
backend/src/core/: justification_gate.py  swarm_registry.py  warden_brain.py
backend/src/utils/: ledger_client.py  logger.py  regulatory_sensor.py
backend/tests/: test_infra.py  test_logic.py
backend/uvicorn-0.41.0.dist-info/: RECORD
docs/: requirements.md
frontend/: README.md  package-lock.json  package.json
infra/: dynamodb_schema.json  (+2 more)
(+67 files in other folders)
