[project]
name = "spec-drift-chronometer"
version = "0.1.0"
description = "Sovereign AI Governance: Monitoring technical drift and EU AI Act compliance in real-time."
authors = [
    { name = "Vinita Silaparasetty", email = "vinita@aevoxis.com" }
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
