[project]
name = "spec-drift-chronometer"
version = "0.1.0"
description = "Sovereign AI Governance and Drift Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.uv.workspace]
members = ["backend"]

[project.scripts]
chronometer = "backend.main:main"

[tool.hatch.build.targets.wheel]
# This tells Hatchling: "Don't look for a folder matching the project name,
# just include the backend folder."
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
