[project]
name = "backend"
version = "0.1.0"
description = "Aevoxis Sovereign Governance Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "mangum>=0.19.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
chronometer = "main:main"
